test/fail/integration/_fail_grammar_expr_intdiv_1.hs
x :: Int
x = jl div 4
main = print "hello"